adding logged in user details logic

--- a/RecipeForum_frontend/RecipeForum_frontend/Pages/Profil.razor
+++ b/RecipeForum_frontend/RecipeForum_frontend/Pages/Profil.razor
@@ -115,4 +115,18 @@
             await LoadMyRecipes();
         }
     }
+
+    private UserDto CurrentUser;
+
+    private async Task GetCurrentUserAsync()
+    {
+        try
+        {
+            UserDto userDto = await SwaggerClient.GetCurrentUserAsync();
+        }
+        catch (Exception ex)
+        {
+            Console.WriteLine($"Hiba a felhasználó adatainak betöltésekor: {ex.Message}");
+        }
+    }
 }
