--- a/RecipeForum_frontend/RecipeForum_frontend/Pages/Profil.razor
+++ b/RecipeForum_frontend/RecipeForum_frontend/Pages/Profil.razor
@@ -9,6 +9,13 @@
 @inject AuthenticationStateProvider AuthStateProvider
 
 
+<style>
+    .card:hover {
+        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+        cursor: pointer;
+    }
+</style>
+
 <h3>Profil</h3>
 
 
@@ -22,8 +29,8 @@
             </MudItem>
             <MudItem xs="12" sm="9" md="10">
                 <MudStack Spacing="1">
-                    <MudText Typo="Typo.h4" Style="font-weight:bold;">@CurrentUser.Name (@CurrentUser.UserName)</MudText>
-                    <MudText Typo="Typo.body2" Color="Color.Secondary">@CurrentUser.Email</MudText>
+                    <MudText Typo="Typo.h4" Style="font-weight:bold;">@(CurrentUser?.Name ?? "") (@(CurrentUser?.UserName ?? ""))</MudText>
+                    <MudText Typo="Typo.body2" Color="Color.Secondary">@(CurrentUser?.Email ?? "")</MudText>
 
                     <MudStack Row="true" Class="my-3" Spacing="1">
                         <MudStack Spacing="0" AlignItems="AlignItems.Center">
@@ -39,6 +46,49 @@
         </MudGrid>
     </MudPaper>
 
+    <MudTabs Elevation="0" Rounded="true" ApplyEffectsToContainer="true" PanelClass="mt-4">
+
+        <MudTabPanel Text="@($"My recipes ({myRecipes.Count})")">
+            @if (isLoading)
+            {
+                <MudProgressCircular Color="Color.Primary" Indeterminate="true" />
+            }
+            else if (myRecipes.Any())
+            {
+                <MudGrid>
+                    @foreach (var recipe in myRecipes)
+                    {
+                        <MudItem xs="12" sm="4">
+                            <MudCard Class="card" onclick="@(() => NavigateToRecipe(recipe.Id))">
+                                <MudCardHeader>
+                                    <CardHeaderContent>
+                                        <MudText Typo="Typo.body1">@recipe.Name</MudText>
+                                        <MudText Typo="Typo.body2">@($"{recipe.Portion} - {recipe.CookTime}")</MudText>
+                                    </CardHeaderContent>
+                                </MudCardHeader>
+                                <MudCardMedia Image="@recipe.ImageRef" Height="250" />
+                                <MudCardActions>
+                                    <MudTooltip Text="More">
+                                        <MudMenu Icon="@Icons.Material.Filled.Menu">
+                                            <MudMenuItem Icon="@Icons.Material.Filled.FoodBank" OnClick="@(() => NavigateToRecipe(recipe.Id))">Details</MudMenuItem>
+                                            <MudMenuItem Icon="@Icons.Material.Filled.Edit" IconColor="Color.Secondary" OnClick="@(() => OpenEditRecipeDialog(recipe))">Edit</MudMenuItem>
+                                            <MudMenuItem Icon="@Icons.Material.Filled.Delete" IconColor="Color.Error" OnClick="@(() => OpenDeleteDialog(recipe.Id))">Delete</MudMenuItem>
+                                        </MudMenu>
+                                    </MudTooltip>
+                                </MudCardActions>
+                            </MudCard>
+                        </MudItem>
+                    }
+                </MudGrid>
+            }
+            else
+            {
+                <MudText>No recipe.</MudText>
+            }
+        </MudTabPanel>
+
+
+    </MudTabs>
 
 </MudContainer>
 
@@ -49,6 +99,7 @@
     private List<RecipeDto> myRecipes = new();
     private UserDto CurrentUser { get; set; }
     private bool IsUserLoggedIn = false;
+   
 
     protected override async Task OnInitializedAsync()
     {
