--- a/RecipeForum_frontend/RecipeForum_frontend/Layout/AccountNavMenu.razor
+++ b/RecipeForum_frontend/RecipeForum_frontend/Layout/AccountNavMenu.razor
@@ -12,17 +12,19 @@
     <Authorized>
         <MudNavLink Href="/Profil" Icon="@Icons.Material.Filled.PersonOutline">Profile</MudNavLink> @*Insert here profile page link*@ 
         <MudNavLink OnClick="@(() => OpenAddRecipeDialog())" Icon="@Icons.Material.Filled.Upload">Add Recipe</MudNavLink> @*Recipe dialog*@
-        <MudDivider Class="my-2" /> 
+        <MudNavLink OnClick="@(() => OpenRegisterDialog())" Icon="@Icons.Material.Filled.PersonAddAlt">Register</MudNavLink>
+        <MudDivider Class="my-2" />
         <MudNavLink Icon="@Icons.Material.Filled.Logout" OnClick=" Logout">Logout</MudNavLink>
     </Authorized> 
 
     @* GUEST MENU *@ 
     <NotAuthorized> 
+        <MudNavLink OnClick="@(() => OpenRegisterDialog())" Icon="@Icons.Material.Filled.PersonAddAlt">Register</MudNavLink>
         <MudNavLink Href="/Account" Icon="@Icons.Material.Filled.Login">Login</MudNavLink> 
      </NotAuthorized> 
 </AuthorizeView>
 
-@code { 
+@code {
     private async Task Logout() 
     { 
         if (AuthProvider is CookieAuthenticationStateProvider cookieAuth) 
@@ -54,7 +56,7 @@
 
         if (!result.Canceled)
         {
-            CategoryFilterState.ResetFilter();
+            CategoryFilterState.ResetFilter();
             Snackbar.Add("Recipe added", Severity.Success);
             if (Navigation.ToBaseRelativePath(Navigation.Uri) != "")
             {
@@ -63,4 +65,23 @@
         }
     }
 
+    private async Task OpenRegisterDialog()
+    {
+        var parameters = new DialogParameters();
+
+        var options = new DialogOptions()
+        {
+            CloseButton = true,
+            MaxWidth = MaxWidth.Small,
+            CloseOnEscapeKey = true,
+            FullWidth = true
+        };
+        var dialog = await DialogService.ShowAsync<RegisterDialog>("Register", parameters, options);
+        var result = await dialog.Result;
+
+        if (!result.Canceled)
+        {
+            Snackbar.Add("User registered", Severity.Success);
+        }
+    }
 }
