--- a/RecipeForum_frontend/RecipeForum_frontend/Layout/AccountNavMenu.razor
+++ b/RecipeForum_frontend/RecipeForum_frontend/Layout/AccountNavMenu.razor
@@ -10,10 +10,8 @@
 <AuthorizeView>
     @* USER MENU *@ 
     <Authorized>
-        <MudNavLink Href="/Profil" Icon="@Icons.Material.Filled.PersonOutline">Profile</MudNavLink> @*Insert here profile page link*@ 
-        <MudNavLink OnClick="@(() => OpenAddRecipeDialog())" Icon="@Icons.Material.Filled.Upload">Add Recipe</MudNavLink> @*Recipe dialog*@
-        <MudNavLink OnClick="@(() => OpenRegisterDialog())" Icon="@Icons.Material.Filled.PersonAddAlt">Register</MudNavLink>
-        <MudDivider Class="my-2" />
+        <MudNavLink Href="/Profil" Icon="@Icons.Material.Filled.PersonOutline">Profile</MudNavLink>
+        <MudNavLink OnClick="@(() => OpenAddRecipeDialog())" Icon="@Icons.Material.Filled.Upload">Add Recipe</MudNavLink>
         <MudNavLink Icon="@Icons.Material.Filled.Logout" OnClick=" Logout">Logout</MudNavLink>
     </Authorized> 
 
@@ -27,11 +25,12 @@
 @code {
     private async Task Logout() 
     { 
-        if (AuthProvider is CookieAuthenticationStateProvider cookieAuth) 
-        { 
-            cookieAuth.NotifyAuthenticationStateChanged();
-            Snackbar.Add("Logged out succesfully.", Severity.Info);
-        } 
+        if (AuthProvider is CookieAuthenticationStateProvider cookieAuth)
+        {
+            await cookieAuth.MarkUserAsLoggedOut();
+            Snackbar.Add("Logged out successfully.", Severity.Info);
+            Navigation.NavigateTo("/");
+        }
     } 
 
     private async Task OpenAddRecipeDialog()
@@ -49,7 +48,8 @@
         {
             CloseButton = true,
             MaxWidth = MaxWidth.Medium,
-            FullWidth = true
+            FullWidth = true,
+            CloseOnEscapeKey = true
         };
         var dialog = await DialogService.ShowAsync<AddRecipeDialog>("Add New Recipe", parameters, options);
         var result = await dialog.Result;
