Remove temporary AddRecipe button and dialog from Home

--- a/RecipeForum_frontend/RecipeForum_frontend/Dialogs/AddRecipeDialog.razor
+++ b/RecipeForum_frontend/RecipeForum_frontend/Dialogs/AddRecipeDialog.razor
@@ -31,7 +31,7 @@
                 </MudItem>
 
                 <MudItem xs="12">
-                    <MudTextField Variant="Variant.Outlined" @bind-Value="Recipe.Description" Label="Description" Lines="5"/>
+                    <MudTextField Variant="Variant.Outlined" @bind-Value="Recipe.Description" Label="Description" Lines="5" Required="true" />
                 </MudItem>
 
                 <MudItem xs="12" Class="d-flex gap-2 flex-column">
