--- a/RecipeForum_frontend/RecipeForum_frontend/Pages/Recipe.razor
+++ b/RecipeForum_frontend/RecipeForum_frontend/Pages/Recipe.razor
@@ -66,7 +66,7 @@
                 {
                     @foreach (var item in recipe.Ingredients)
                     {
-                        <li>@item.Quantity</li>
+                        <li>@item.Material.Name - @item.Quantity - @item.Material.Calories kcal</li>
                     }
                 }
             </ul>
